--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Intro to CS</title>
+    <title>Linked Lists</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>Intro To CS</h1>
+    <h1>Linked Lists</h1>
     <script src="./script.js"></script>
 </body>
 </html>
